--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     <img src="./assets/CiniLogo.svg" alt="Cini Group Logo" class="h-10">
                     <span class="text-2xl font-bold ">CINI<br/> GROUP</span>
                 </div>
-                <button class="whitespace-nowrap align-center items-center flex py-2 px-4 rounded text-white text-blue-600 text-[#003897] bg-white rounded-full font-bold">Catalogues <img src="./assets/DropArrow.svg" alt="Cini Group Logo" class="w-4"></button>
+                <button class="whitespace-nowrap align-center items-center flex py-2 px-4 rounded text-white text-blue-600 text-[#003897] bg-white rounded-full font-bold">Catalogues
+                    <svg class="ml-2" width="16px" height="16px" viewBox="0 0 0.96 0.96" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h0.96v0.96H0z" fill="none"/><g id="Shopicon"><path points="24,29.172 9.414,14.586 6.586,17.414 24,34.828 41.414,17.414 38.586,14.586 	" d="M0.48 0.583L0.188 0.292L0.132 0.348L0.48 0.697L0.828 0.348L0.772 0.292Z"/></g></svg>
+                </button>
             </div>
           <div class="pt-16">
             <div class="slider mx-auto max-w-[1200px] " style="max-width: 1200px;">
@@ -41,13 +43,13 @@
                     </div>
                 </div>
                 <div class=" ">
-                    <div class=" text-center flex">
-                        <div>
-                            <img src="./assets/Images/HomeHeroSlider1@2x.jpg" alt="Hands" class="">
-                            <button class="mt-6 bg-blue-600 py-2 px-6 rounded text-white">Discover more</button>
+                    <div class="flex gap-14">
+                        <div class="flex-1" style="max-width: 40%;">
+                            <img src="./assets/Images/HomeHeroSlider1@2x.jpg" alt="Hands" class="w-full" style="border-radius: 30px;" />
+                            <button class="mt-6 bg-blue-600 py-2 px-6 rounded text-white rounded-full flex whitespace-nowrap items-center align-center gap-4">Discover more  <img src="./assets/ButtonArrow.svg" alt="Hands" class="w-4" /></button>
                         </div>
-                        <div>
-                            <h1 class="text-4xl font-bold mt-4">Solutions that connect with everything.</h1>
+                        <div class="flex-1">
+                            <h1 class=" font-bold mt-4" style="font-size: 70px;line-height: 1.2;">Solutions that connect with everything.</h1>
                         </div>
                     </div>
                 </div>
@@ -62,11 +64,11 @@
     <!-- Navigation Section -->
     <nav class="bg-black py-4">
         <div class="container mx-auto flex justify-center space-x-8 text-gray-300">
-            <a href="#" class="hover:text-white">Story</a>
-            <a href="#" class="hover:text-white">Brands</a>
-            <a href="#" class="hover:text-white">News</a>
-            <a href="#" class="hover:text-white">Careers</a>
-            <a href="#" class="hover:text-white">Reach us</a>
+            <a href="#" class="hover:text-white border-l  pl-4">Story</a>
+            <a href="#" class="hover:text-white border-l pl-4 ">Brands</a>
+            <a href="#" class="hover:text-white border-l pl-4 ">News</a>
+            <a href="#" class="hover:text-white border-l pl-4 ">Careers</a>
+            <a href="#" class="hover:text-white border-l pl-4 ">Reach us</a>
         </div>
     </nav>
 
