--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     </section>
 
     <div class="container mx-auto p-8"  style="max-width: 1280px;">
-        <div class="flex flex-col md:flex-row md:space-x-8">
-            <div class="w-full md:w-1/2 mb-8 md:mb-0">
+        <div class="flex flex-col md:flex-row md:space-x-8 justify-between">
+            <div class="w-full md:w-1/3 mb-8 md:mb-0">
                 <iframe class="w-full h-full rounded-md" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.986071793027!2d14.48358041588731!3d35.879240980151215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130e5a2eb4b1f05b%3A0x6bdb3deef7fa0b3!2sCini%20Group%20-%20Nature%20Line%20Ltd%20%7C%20Lamb%20Brand!5e0!3m2!1sen!2smt!4v1626455366943!5m2!1sen!2smt" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="w-full md:w-1/2">
