--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header Section -->
     <header class="relative bg-black py-8 bg-no-repeat bg-cover bg-center"
         style="background-image: url('./assets/Images/HomeHeroBack@2x.jpg');">
-        <div class="max-w-[950px] xxl:max-w-7xl mx-auto">
+        <div class="max-w-[930px]  xl:max-w-[1200px] mx-auto">
             <div class="container mx-auto w-full flex justify-between items-center px-6">
                 <div class="flex items-center space-x-4">
                     <img src="./assets/CiniLogo.svg" alt="Cini Group Logo" class="h-10">
@@ -62,7 +62,7 @@
 
             </div>
             <div class="pt-16">
-                <div class="slider mx-auto max-w-7xl ">
+                <div class="slider mx-auto max-w-[930px] xl:max-w-[1200px] ">
                     <div class=" ">
                         <div class="flex gap-14">
                             <div class="flex-1" style="max-width: 40%;">
@@ -73,7 +73,7 @@
                                     more <img src="./assets/ButtonArrow.svg" alt="Hands" class="w-6" /></button>
                             </div>
                             <div class="flex-1">
-                                <h1 class=" font-bold mt-4" style="font-size: 70px;line-height: 1.2;">Solutions that
+                                <h1 class=" font-bold mt-4 text-6xl xl:text-[70px] leading-[1] xl:leading-[1.2]" >Solutions that
                                     connect with everything.</h1>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                     more <img src="./assets/ButtonArrow.svg" alt="Hands" class="w-6" /></button>
                             </div>
                             <div class="flex-1">
-                                <h1 class=" font-bold mt-4" style="font-size: 70px;line-height: 1.2;">Solutions that
+                                <h1 class=" font-bold mt-4 text-6xl xl:text-[70px] leading-[1] xl:leading-[1.2]" >Solutions that
                                     connect with everything.</h1>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
     <!-- Navigation Section -->
   <div class="navigation-section pt-24 ">
       <div class=" py-4 w-full mx-auto ">
-        <div class="container mx-auto max-w-7xl flex justify-center space-x-8 text-white">
+        <div class="container mx-auto max-w-[930px] xl:max-w-[1200px] flex justify-center space-x-8 text-white">
             <a href="#" class="hover:text-gray-300 border-l  pt-20 pl-4 flex-1">
 
                 <p class="text-3xl font-bold">Story</p>
@@ -146,7 +146,7 @@
     <!-- Story Section -->
     <div class="bg-[#283a97]">
     <section class=" story-section relative">
-        <div class="max-w-7xl mx-auto  flex justify-center relative">
+        <div class="max-w-[930px] xl:max-w-[1200px] mx-auto  flex justify-center relative">
             <div class="text-left flex-1 ">
                 <div class="py-20">
                     <h2 class="main-title  pb-10">Cini Group’s story.</h2>
@@ -179,7 +179,7 @@
 
     <!-- Latest News Section -->
     <section class="bg-white text-black py-16">
-        <div class="container mx-auto px-6 max-w-7xl">
+        <div class="container mx-auto px-6 max-w-[930px] xl:max-w-[1200px]">
             <h2 class="main-title text-center text-[#283a97] pb-10 flex justify-between">Latest news.
                 <button
                     class="text-xl mt-6 bg-[#283a97] font-normal  read-more-btn h-14 justify-center i text-white rounded-full flex whitespace-nowrap items-center align-center gap-4">
@@ -255,7 +255,7 @@
     </section>
 
     <section class="py-16 bg-[#f7f7f7] text-gray-900">
-        <div class="max-w-7xl mx-auto px-6">
+        <div class="max-w-[930px] xl:max-w-[1200px] mx-auto px-6">
             <!-- Header -->
             <div class="text-center mb-12">
                 <h1 class="main-title text-[#283a97] pb-5 text-left">Careers.</h1>
@@ -464,7 +464,7 @@
                             data processing practices and your rights under GDPR, please refer to our Privacy Policy.
                         </p>
                         <button type="submit"
-                        class=" text-base mt-7 bg-white py-2 px-6 rounded text-black rounded-full flex whitespace-nowrap items-center align-center gap-4">
+                        class=" text-base mt-7 bg-white py-2 px-6  text-black rounded-full flex whitespace-nowrap items-center align-center gap-4">
                         Submit →</button>
 
                     </form>
