--- a/curve.html
+++ b/curve.html
@@ -37,7 +37,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100px; 
+        height: 100px;
         background: white;
         border-radius: 0;
         transform: rotate(0deg);
@@ -53,14 +53,14 @@
       justify-content: center;
       background-color: #fff;
 
-        
+
     }
-    
+
     .curve-top::after {
         content: '';
     position: absolute;
     top: -113px;
-    left: -104px;
+    left: -153px;
     width: 123%;
     height: 440px;
     background: transparent;
@@ -68,6 +68,7 @@
     border-radius: 50%;
     /* transform: translateY(50%); */
     border-top: 116px solid;
+    transform: rotate(.55deg);
     }
 
     .contet-wrapper{
