--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                         '1200px': '1200px',
                         // You can add more custom max-width values here if needed
                     },
+                    maxHeight: {
+                        '1.5': '1px',
+                        '528px': '528px'
+
+                    },
                     borderRadius: {
                         'full': '9999px',
                         '30px': '30px',
@@ -100,19 +105,19 @@
                         <a class="flex items-center justify-between group relative" href="#">
                             <div class=" transition-colors duration-300">Catalogue 1</div>
                             <div
-                                class="group-hover:w-10 w-0 h-2px bg-white absolute rounded-md bottom-1/2 right-4 transition-all duration-300">
+                                class="group-hover:w-10 w-0 h-0.5 bg-white absolute rounded-md bottom-1/2 right-4 transition-all duration-300">
                             </div>
                         </a>
                         <a class="flex items-center justify-between group relative" href="#">
                             <div class=" transition-colors duration-300">Catalogue 2</div>
                             <div
-                                class="group-hover:w-10 w-0 h-2px bg-white absolute rounded-md bottom-1/2 right-4 transition-all duration-300">
+                                class="group-hover:w-10 w-0 h-0.5 bg-white absolute rounded-md bottom-1/2 right-4 transition-all duration-300">
                             </div>
                         </a>
                         <a class="flex items-center justify-between group relative" href="#">
                             <div class=" transition-colors duration-300">Catalogue 3</div>
                             <div
-                                class="group-hover:w-10 w-0 h-2px bg-white absolute rounded-md bottom-1/2 right-4 transition-all duration-300">
+                                class="group-hover:w-10 w-0 h-0.5 bg-white absolute rounded-md bottom-1/2 right-4 transition-all duration-300">
                             </div>
                         </a>
 
