--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
 
                 <div class="flex gap-4 flex-row md:flex-col justify-around md:justify-start py-4 md:py-0">
                     <a href="#" class="hover:text-white"><i
-                            class="text-2xl md:text-base fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="hover:text-white"><i class="text-2xl md:text-base fab fa-instagram"></i></a>
+                            class="text-2xl md:text-2xl fa-brands fa-facebook-f"></i></a>
+                    <a href="#" class="hover:text-white"><i class="text-2xl md:text-2xl fab fa-instagram"></i></a>
                     <a href="#" class="hover:text-white"><i
-                            class="text-2xl md:text-base fa-brands fa-linkedin-in"></i></a>
-                    <a href="#" class="hover:text-white"><i class="text-2xl md:text-base fab fa-tiktok"></i></a>
+                            class="text-2xl md:text-2xl fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" class="hover:text-white"><i class="text-2xl md:text-2xl fab fa-tiktok"></i></a>
                 </div>
 
             </div>
@@ -604,7 +604,7 @@
                 </div>
                 <div class="flex-1 mt-4 md:mt-0">
                     <div
-                        class="flex flex-col md:flex-row justify-between border-none md:border-b pb-0 md:pb-5 lg:pb-10 mb-4 lg:mb-8">
+                        class="flex flex-col md:flex-row justify-between border-b-none md:border-b pb-0 md:pb-5 lg:pb-10 mb-4 lg:mb-8">
                         <div class="flex  flex-wrap md:flex-none flex-row gap-3 md:gap-7">
                             <a href="#"
                                 class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Story</a>
@@ -616,11 +616,11 @@
                             <a href="#" class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Reach
                                 us</a>
                         </div>
-                        <div class="hidden md:block">
-                            <a href="#" class="hover:text-white"><i class="fab fa-facebook"></i></a>
-                            <a href="#" class="hover:text-white"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="hover:text-white"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" class="hover:text-white"><i class="fab fa-tiktok"></i></a>
+                        <div class="hidden md:flex gap-4">
+                            <a href="#" class="hover:text-white"><i class="text-2xl fab fa-facebook"></i></a>
+                            <a href="#" class="hover:text-white"><i class="text-2xl fab fa-instagram"></i></a>
+                            <a href="#" class="hover:text-white"><i class="text-2xl fab fa-linkedin"></i></a>
+                            <a href="#" class="hover:text-white"><i class="text-2xl fab fa-tiktok"></i></a>
                         </div>
                     </div>
                     <div class=" flex flex-col md:flex-row justify-between items-start md:items-center">
