--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@
                             <a href="#" class="hover:text-white text-sm lg:text-base">Terms and conditions</a>
                             <a href="#" class="hover:text-white text-sm lg:text-base">Cookie policy</a>
                         </div>
-                        <div class="text-xs lg:text-sm ">
-                            <p class="mt-3 md:mt-0">© 2024 CINI GROUP. ALL RIGHTS RESERVED</p>
-                            <p class="mt-3 md:mt-0">Designed & Developed by The Concept Stadium</p>
+                        <div class=" text-right">
+                            <p class="text-xs lg:text-xs mt-3 md:mt-0 font-bold ">© 2024 CINI GROUP. ALL RIGHTS RESERVED</p>
+                            <p class="text-xs lg:text-sm mt-3 md:mt-0 font-light">Designed & Developed by The Concept Stadium</p>
                         </div>
                         <div class="md:hidden  mt-3 flex gap-5">
                             <a href="#" class="hover:text-white"><i class=" text-2xl  fab fa-facebook"></i></a>
