--- a/index.html
+++ b/index.html
@@ -589,9 +589,9 @@
         </div>
 
 
-        <footer class=" text-white p-4  pt-7 flex justify-center items-center" style="background-color: #283A97;">
+        <footer class=" text-white p-4  pt-7 flex justify-center items-center bg-custom-blue" >
             <div class="max-w-700px lg:max-w-930px xl:max-w-1200px w-full mx-auto flex flex-col  md:flex-row">
-                <div class="text-sm " style="width: 25%;">
+                <div class="text-sm w-1/4" >
                     <div class="flex items-center space-x-4">
                         <img src="./assets/CiniLogo.svg" alt="Cini Group Logo" class="h-8 lg:h-10">
 
