--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         style="background-image: url('./assets/Images/HomeHeroBack@2x.jpg');">
         <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px mx-auto">
             <div class="container mx-auto w-full flex justify-between items-center px-6">
-                <div class="flex items-center space-x-4">
+                <a href="/" class="flex items-center space-x-4">
                     <img src="./assets/CiniLogo.svg" alt="Cini Group Logo" class="h-6 md:h-10">
 
-                </div>
+                </a>
                 <div class="dropdown max-w-180px w-full">
                     <button class="dropdown-toggle max-w-180px w-full h-11 justify-center">
                         Catalogues
@@ -185,32 +185,32 @@
         <div class=" py-4 w-full mx-auto ">
             <div
                 class=" mx-auto max-w-700px lg:max-w-930px xl:max-w-1200px flex flex-col md:flex-row justify-center space-x-0 md:space-x-8 text-white">
-                <a href="#"
+                <a href="#story"
                     class="hover:text-gray-300 border-b md:border-l md:border-b-0  pb-2 md:pb-0 pt-0 md:pt-20 pl-4 flex-1">
 
                     <p class="text-3xl md:text-xl lg:text-3xl font-bold">Story</p>
                     <p class="text-xl font-semibold">01 <span class="text-base text-blue-800">/05</span></p>
                 </a>
-                <a href="#"
+                <a href="./brands.html"
                     class="hover:text-gray-300 border-b md:border-l md:border-b-0  pb-2 md:pb-0 pt-8 md:pt-20 pl-4 flex-1">
 
 
                     <p class="text-3xl md:text-xl lg:text-3xl font-bold">Brands</p>
                     <p class="text-xl font-semibold">02 <span class="text-base text-blue-800">/05</span></p>
                 </a>
-                <a href="#"
+                <a href="#news"
                     class="hover:text-gray-300 border-b md:border-l md:border-b-0  pb-2 md:pb-0 pt-8 md:pt-20 pl-4 flex-1">
 
                     <p class="text-3xl md:text-xl lg:text-3xl font-bold">News</p>
                     <p class="text-xl font-semibold">03 <span class="text-base text-blue-800">/05</span></p>
                 </a>
-                <a href="#"
+                <a href="#careers"
                     class="hover:text-gray-300 border-b md:border-l md:border-b-0 pb-2 md:pb-0  pt-8 md:pt-20 pl-4 flex-1">
 
                     <p class="text-3xl md:text-xl lg:text-3xl font-bold">Careers</p>
                     <p class="text-xl font-semibold">04<span class="text-base text-blue-800">/05</span></p>
                 </a>
-                <a href="#"
+                <a href="#reach_us"
                     class="hover:text-gray-300 border-b md:border-l md:border-b-0 pb-2 md:pb-0 pt-8 md:pt-20 pl-4 flex-1">
 
                     <p class="text-3xl md:text-xl lg:text-3xl font-bold">Reach us</p>
@@ -231,7 +231,7 @@
     </div>
 
     <!-- Story Section -->
-    <div class="bg-custom-blue">
+    <div id="story" class="bg-custom-blue">
         <section class=" story-section relative px-5">
             <div class="max-w-700px lg:max-w-930px xl:max-w-1200px mx-auto  flex justify-center relative">
                 <div class="text-left flex-1 ">
@@ -270,7 +270,7 @@
 
 
     <!-- Latest News Section -->
-    <section class="bg-white text-black py-8 md:py-16">
+    <section id="news" class="bg-white text-black py-8 md:py-16">
         <div class="container mx-auto px-5 md:px-6 max-w-700px lg:max-w-930px xl:max-w-1200px">
             <h2 class="main-title text-center text-custom-blue pb-5 md:pb-10 flex justify-between">Latest news.
                 <button
@@ -288,7 +288,7 @@
             <div class="flex flex-col md:flex-row gap-5 mt-10">
                 <div class="flex-1 relative group overflow-hidden rounded-3xl">
                     <img src="./assets/Images/front-view-young-woman-looking-away.jpg"
-                        class="h-full max-h-528px min-h-80 rounded-3xl object-cover transition-transform duration-500 ease-in-out group-hover:scale-105" />
+                        class="h-full w-full max-h-528px min-h-80 rounded-3xl object-cover transition-transform duration-500 ease-in-out group-hover:scale-105" />
                     <div
                         class="absolute h-auto p-3 lg:p-5 xl:p-10 left-0 top-75% lg:top-73% group-hover:top-0 group-hover:bottom-0 right-0  flex flex-col justify-end bg-custom-blue bg-opacity-0 group-hover:bg-custom-blue-2 group-hover:bg-opacity-90 transition-all duration-500 ease-in-out rounded-3xl">
                         <button
@@ -315,7 +315,7 @@
                 </div>
                 <div class="flex-1 relative group overflow-hidden rounded-3xl">
                     <img src="./assets/Images/elevated-view-fresh-vegetables-white-wooden-desk (extended).jpg"
-                        class="h-full max-h-528px min-h-80 rounded-3xl object-cover transition-transform duration-500 ease-in-out group-hover:scale-105" />
+                        class="h-full w-full max-h-528px min-h-80 rounded-3xl object-cover transition-transform duration-500 ease-in-out group-hover:scale-105" />
                     <div
                         class="absolute h-auto p-3 lg:p-5 xl:p-10 left-0 top-75% lg:top-73% group-hover:top-0 group-hover:bottom-0 right-0  flex flex-col justify-end bg-custom-blue bg-opacity-0 group-hover:bg-custom-blue-2 group-hover:bg-opacity-90 transition-all duration-500 ease-in-out rounded-3xl">
                         <button
@@ -354,7 +354,7 @@
         </div>
     </section>
 
-    <section class="py-5 md:py-16 bg-custom-gray-2 text-gray-900">
+    <section id="careers" class="py-5 md:py-16 bg-custom-gray-2 text-gray-900">
         <div class="max-w-700px lg:max-w-930px xl:max-w-1200px mx-auto px-4 md:px-6">
             <!-- Header -->
             <div class="text-center mb-12">
@@ -539,7 +539,7 @@
             </div>
         </div>
     </section>
-    <div class="bg-black">
+    <div id="reach_us" class="bg-black">
 
         <div class="max-w-700px lg:max-w-930px xl:max-w-1200px mx-auto p-4 md:p-8 py-4 md:py-20">
             <div class="flex flex-col lg:flex-row  justify-between">
@@ -589,9 +589,9 @@
         </div>
 
 
-        <footer class=" text-white p-4  pt-7 flex justify-center items-center bg-custom-blue" >
+        <footer class=" text-white p-4  pt-7 flex justify-center items-center bg-custom-blue">
             <div class="max-w-700px lg:max-w-930px xl:max-w-1200px w-full mx-auto flex flex-col  md:flex-row">
-                <div class="text-sm w-1/4" >
+                <div class="text-sm w-1/4">
                     <div class="flex items-center space-x-4">
                         <img src="./assets/CiniLogo.svg" alt="Cini Group Logo" class="h-8 lg:h-10">
 
@@ -606,18 +606,18 @@
                     <div
                         class="flex flex-col md:flex-row justify-between border-b-none md:border-b pb-0 md:pb-5 lg:pb-10 mb-4 lg:mb-8">
                         <div class="flex  flex-wrap md:flex-none flex-row gap-3 md:gap-7">
-                            <a href="#"
+                            <a href="#story"
                                 class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Story</a>
-                            <a href="#"
+                            <a href="./brands.html"
                                 class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Brands</a>
-                            <a href="#" class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">News</a>
-                            <a href="#"
+                            <a href="#news" class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">News</a>
+                            <a href="#careers"
                                 class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Careers</a>
-                            <a href="#" class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Reach
+                            <a href="#reach_us" class="hover:text-white text-white text-sm lg:text-base w-40% md:w-max">Reach
                                 us</a>
                         </div>
                         <div class="hidden md:flex gap-4">
-                            <a href="#" class="hover:text-white"><i class="text-2xl fab fa-facebook"></i></a>
+                            <a href="#" class="hover:text-white"><i class="text-2xl fa-brands fa-facebook-f"></i></a>
                             <a href="#" class="hover:text-white"><i class="text-2xl fab fa-instagram"></i></a>
                             <a href="#" class="hover:text-white"><i class="text-2xl fab fa-linkedin"></i></a>
                             <a href="#" class="hover:text-white"><i class="text-2xl fab fa-tiktok"></i></a>
@@ -631,11 +631,13 @@
                             <a href="#" class="hover:text-white text-sm lg:text-base">Cookie policy</a>
                         </div>
                         <div class=" text-right">
-                            <p class="text-xs lg:text-xs mt-3 md:mt-0 font-bold ">© 2024 CINI GROUP. ALL RIGHTS RESERVED</p>
-                            <p class="text-xs lg:text-sm mt-3 md:mt-0 font-light">Designed & Developed by The Concept Stadium</p>
+                            <p class="text-xs lg:text-xs mt-3 md:mt-0 font-bold ">© 2024 CINI GROUP. ALL RIGHTS RESERVED
+                            </p>
+                            <p class="text-xs lg:text-sm mt-3 md:mt-0 font-light">Designed & Developed by The Concept
+                                Stadium</p>
                         </div>
                         <div class="md:hidden  mt-3 flex gap-5">
-                            <a href="#" class="hover:text-white"><i class=" text-2xl  fab fa-facebook"></i></a>
+                            <a href="#" class="hover:text-white"><i class=" text-2xl  fa-brands fa-facebook-f"></i></a>
                             <a href="#" class="hover:text-white"><i class=" text-2xl  fab fa-instagram"></i></a>
                             <a href="#" class="hover:text-white"><i class=" text-2xl  fab fa-linkedin"></i></a>
                             <a href="#" class="hover:text-white"><i class=" text-2xl  fab fa-tiktok"></i></a>
