--- a/brands.html
+++ b/brands.html
@@ -94,7 +94,7 @@
   </script>
 </head>
 
-<body class="bg-gray-50">
+<body class="bg-white">
 
   <!-- Header -->
   <header class="bg-white text-white p-4 relative z-10">
@@ -188,11 +188,11 @@
 
   <!-- Main Content -->
   <main class="container mx-auto my-12">
-    <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px w-full mx-auto px-10">
+    <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px w-full mx-auto px-5 md:px-10">
       <div class="flex flex-col lg:flex-row justify-center gap-8 xl:gap-16">
 
         <div class="rounded-2xl max-w-full lg:max-w-45% xl:max-w-40% w-full bg-custom-gray-2">
-          <img class="rounded-t-2xl w-full h-64 object-cover" src="/assets/Images/gradient-3d-fluid-background.jpg"
+          <img class="rounded-t-2xl w-full h-64 object-cover" src="/assets/Images/texture-waving-red-fibers.jpg"
             alt="Company profile">
           <div class="p-7 xl:p-10">
             <h2
@@ -252,8 +252,8 @@
       </div>
       <div
         class="mt-14 rounded-2xl bg-custom-gray-2 flex flex-col md:flex-row max-w-797px xl:max-w-960px w-full mx-auto">
-        <img class="rounded-t-2xl md:rounded-l-2xl max-w-full md:max-w-230px lg:max-w-400px  w-full object-cover"
-          src="/assets/Images/dark-light-blue-aquarelle-background.jpg" alt="">
+        <img class="rounded-t-2xl  md:rounded-l-2xl  md:rounded-tr-none max-w-full md:max-w-230px lg:max-w-400px  w-full object-cover"
+          src="/assets/Images/foam-deep-blue-colored-liquid.jpg" alt="">
 
         <div class="p-7 xl:p-10 ">
           <h2 class="text-40px xl:text-52px leading-44 xl:leading-56 font-bold font-blue-custom pb-8">
@@ -276,6 +276,67 @@
 
         </div>
       </div>
+       <div class="flex flex-col lg:flex-row justify-center gap-8 xl:gap-16 mt-14">
+
+        <div class="rounded-2xl max-w-full lg:max-w-45% xl:max-w-40% w-full bg-custom-gray-2">
+          <img class="rounded-t-2xl w-full h-64 object-cover" src="/assets/Images/dark-light-blue-aquarelle-background.jpg"
+            alt="Company profile">
+          <div class="p-7 xl:p-10">
+            <h2
+              class="text-40px xl:text-52px leading-44 xl:leading-56 font-bold font-blue-custom pb-6 xl:pb-8 ">
+              Loyalty  <br class="hidden lg:block"> scheme.</h2>
+            <p class="text-black text-sm  mt-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium
+              doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+              beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+              fugit,
+              sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+              qui
+              dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
+              incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+              rem
+              aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+              explicabo.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+              dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+              sit
+              amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+              magnam
+              aliquam quaerat voluptatem.</p>
+          </div>
+        </div>
+        <div class="rounded-2xl max-w-full lg:max-w-45% xl:max-w-40% w-full bg-custom-gray-2">
+          <img class="rounded-t-2xl w-full h-64 object-cover" src="/assets/Images/3d-sea-landscape.jpg"
+            alt="Company profile">
+          <div class="p-7 xl:p-10">
+            <h2
+              class="text-40px xl:text-52px leading-44 xl:leading-56 font-bold font-blue-custom pb-6 xl:pb-8 ">
+              White/private labeling.</h2>
+            <p class="text-black text-sm  mt-2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium
+              doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+              beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+              fugit,
+              sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+              qui
+              dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
+              incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+              rem
+              aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+              explicabo.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+              dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+              sit
+              amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+              magnam
+              aliquam quaerat voluptatem.</p>
+          </div>
+        </div>
+
+
+      </div>
 
     </div>
 
@@ -283,14 +344,14 @@
   </main>
 
   <!-- Brands Section -->
-  <section class="bg-white py-12 ">
-    <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px px-10 w-full mx-auto text-center">
+  <section class="bg-gray-50 py-12 ">
+    <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px px-5 md:px-10 w-full mx-auto text-center">
       <h2 class="main-title text-custom-blue text-left mb-6">Brands</h2>
-      <div class="flex flex-wrap justify-center items-center gap-y-10">
+      <div class="flex flex-wrap justify-center items-center gap-y-2 md:gap-y-10">
         <img src="/assets/Logos/BrandLamb@2x.png" alt="Brand 1" class="h-20 w-30% object-contain mx-4 my-2">
         <img src="/assets/Logos/BrandYuka@2x.png" alt="Brand 1" class="h-20 w-30% object-contain mx-4 my-2">
         <img src="/assets/Logos/BrandChePasta@2x.png" alt="Brand 1" class="h-20 w-30% object-contain mx-4 my-2">
-        <img src="/assets/Logos/BrandRelish@2x.png" alt="Brand 1" class="h-20 w-30% object-contain mx-4 my-2">
+        <img src="/assets/Logos/BrandRelish@2x.png" alt="Brand 1" class="h-32 w-30% object-contain mx-4 my-2">
         <img src="/assets/Logos/BrandKusKus@2x.png" alt="Brand 1" class="h-20 w-30% object-contain mx-4 my-2">
         <img src="/assets/Logos/BrandVitaNatura@2x.png" alt="Brand 1" class="h-20 w-30% object-contain mx-4 my-2">
 
@@ -300,11 +361,11 @@
 
   <!-- Products Section -->
   <section class="bg-blue-900 text-white py-12">
-    <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px px-10 w-full mx-auto">
+    <div class="max-w-700px lg:max-w-930px  xl:max-w-1200px px-5 md:px-10 w-full mx-auto">
       <h2 class="main-title text-white text-left mb-6">Products</h2>
       <div class="flex flex-wrap gap-y-3">
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.57 54.66">
               <g id="Home_page" data-name="Home page">
@@ -345,8 +406,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.35 47.48">
               <defs>
@@ -397,8 +458,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.36 47.57">
               <defs>
@@ -449,8 +510,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.55 47.73">
               <defs>
@@ -501,8 +562,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.55 48.03">
               <defs>
@@ -553,8 +614,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.55 43.67">
               <defs>
@@ -605,8 +666,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.63 54.55">
               <defs>
@@ -664,8 +725,8 @@
           </div>
         </a>
 
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.63 48.65">
               <defs>
@@ -716,8 +777,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 40.86 54.63">
               <defs>
@@ -768,8 +829,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg class="w-8" xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2"
               viewBox="0 0 37.62 54.63">
@@ -821,8 +882,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.57 47.75">
               <defs>
@@ -874,8 +935,8 @@
             </p>
           </div>
         </a>
-        <a href="#"
-          class="flex justify-center items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
+        <a href="./productDetails.html"
+          class="flex  items-end  max-w-280px w-full gap-5 px-10 py-4 rounded-45px group hover:bg-white transition-all duration-300 ease-in-out">
           <div class="max-w-12 w-full">
             <svg xmlns="http://www.w3.org/2000/svg" id="Layer_2" data-name="Layer 2" viewBox="0 0 54.57 47.75">
               <defs>
