--- a/productDetails.html
+++ b/productDetails.html
@@ -105,7 +105,7 @@
   <!-- Header -->
   <header class="bg-white text-white p-4 relative z-10">
     <div class="max-w-700px lg:max-w-930px xl:max-w-1200px mx-auto flex justify-between items-center relative">
-      <a href="#">
+      <a href="/">
         <img src="./assets/CiniLogoBlue.svg" alt="Cini Group Logo" class="h-10">
       </a>
       <nav
@@ -239,7 +239,7 @@
           <div class="flex w-1/2 justify-between">
             <div>
 
-              <p class="font-bold text-custom-blue text-sm md:text-base">Share</p>
+              <a href="" class="font-bold text-custom-blue text-sm md:text-base">Share</a>
 
             </div>
             <div class="flex gap-4 md:gap-6">
